--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html dir="rtl" lang="en">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
     <title>سازمان راهداری و حمل نقل جاده ایی استان اصفهان</title>
-    <base href="/" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
-  </head>
+    <base href="/"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <link rel="icon" type="image/x-icon" href="favicon.ico"/>
+    <link rel="manifest" href="manifest.webmanifest">
+</head>
 
   <body>
     <app-root></app-root>
-  </body>
+    <noscript>لطفاً جاوااسکریپت را فعال کنید تا بتوانید از این برنامه استفاده کنید.</noscript>
+</body>
 </html>
