chore(documention)[*]: add documention

--- a/documentation/coverage.html
+++ b/documentation/coverage.html
@@ -169,6 +169,18 @@
         <tr class="low">
             <td>
                 <!-- miscellaneous -->
+                <a href="./components/LadPlacesFormComponent.html">src/app/components/forms/lad-places-form/lad-places-form.component.ts</a>
+            </td>
+            <td>component</td>
+            <td>LadPlacesFormComponent</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/38)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
                 <a href="./components/LoadCapacitorFormComponent.html">src/app/components/forms/load-capacitor-form/load-capacitor-form.component.ts</a>
             </td>
             <td>component</td>
@@ -187,7 +199,7 @@
             <td>LoaderTypeFormComponent</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/16)</span>
+                <span class="coverage-count">(0/17)</span>
             </td>
         </tr>
         <tr class="low">
@@ -200,6 +212,66 @@
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
                 <span class="coverage-count">(0/12)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./components/ProductFormComponent.html">src/app/components/forms/product-form/product-form.component.ts</a>
+            </td>
+            <td>component</td>
+            <td>ProductFormComponent</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/21)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./interfaces/ProductParent.html">src/app/components/forms/product-form/product-form.component.ts</a>
+            </td>
+            <td>interface</td>
+            <td>ProductParent</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/4)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./interfaces/SelectionOption.html">src/app/components/forms/product-form/product-form.component.ts</a>
+            </td>
+            <td>interface</td>
+            <td>SelectionOption</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/3)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./components/ProvinceAndCityFormComponent.html">src/app/components/forms/province-and-city-form/province-and-city-form.component.ts</a>
+            </td>
+            <td>component</td>
+            <td>ProvinceAndCityFormComponent</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/21)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./interfaces/SelectionOption.html">src/app/components/forms/province-and-city-form/province-and-city-form.component.ts</a>
+            </td>
+            <td>interface</td>
+            <td>SelectionOption</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/3)</span>
             </td>
         </tr>
         <tr class="low">
@@ -529,6 +601,42 @@
         <tr class="low">
             <td>
                 <!-- miscellaneous -->
+                <a href="./components/TreeTableCheckboxComponent.html">src/app/components/trees/tree-table-checkbox/tree-table-checkbox.component.ts</a>
+            </td>
+            <td>component</td>
+            <td>TreeTableCheckboxComponent</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/29)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./interfaces/SelectionKey.html">src/app/components/trees/tree-table-checkbox/tree-table-checkbox.component.ts</a>
+            </td>
+            <td>interface</td>
+            <td>SelectionKey</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/4)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./interfaces/TreeTableChangedData.html">src/app/components/trees/tree-table-checkbox/tree-table-checkbox.component.ts</a>
+            </td>
+            <td>interface</td>
+            <td>TreeTableChangedData</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/3)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
                         <a href="./miscellaneous/variables.html#appTitles">src/app/constants/Titles.ts</a>
             </td>
             <td>variable</td>
@@ -809,6 +917,30 @@
             </td>
             <td>variable</td>
             <td>mockSoftwareUserInfo</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/1)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                        <a href="./miscellaneous/variables.html#mockTariffs">src/app/data/mock/tariff.mock.ts</a>
+            </td>
+            <td>variable</td>
+            <td>mockTariffs</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/1)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                        <a href="./miscellaneous/variables.html#mockTravelTimes">src/app/data/mock/travel-time.mock.ts</a>
+            </td>
+            <td>variable</td>
+            <td>mockTravelTimes</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
                 <span class="coverage-count">(0/1)</span>
@@ -1177,6 +1309,18 @@
         <tr class="low">
             <td>
                 <!-- miscellaneous -->
+                <a href="./interfaces/Tariff.html">src/app/data/model/tariff.model.ts</a>
+            </td>
+            <td>interface</td>
+            <td>Tariff</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/13)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
                 <a href="./interfaces/ColorScheme.html">src/app/data/model/theme.model.ts</a>
             </td>
             <td>interface</td>
@@ -1232,6 +1376,18 @@
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
                 <span class="coverage-count">(0/5)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./interfaces/TravelTime.html">src/app/data/model/travel-time.model.ts</a>
+            </td>
+            <td>interface</td>
+            <td>TravelTime</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/8)</span>
             </td>
         </tr>
         <tr class="low">
@@ -1399,7 +1555,7 @@
             <td>DashboardComponent</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/22)</span>
+                <span class="coverage-count">(0/21)</span>
             </td>
         </tr>
         <tr class="low">
@@ -1580,6 +1736,18 @@
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
                 <span class="coverage-count">(0/5)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./injectables/TravelTimeManagementService.html">src/app/services/travel-time-management/travel-time-management.service.ts</a>
+            </td>
+            <td>injectable</td>
+            <td>TravelTimeManagementService</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/9)</span>
             </td>
         </tr>
         <tr class="low">
