--- a/documentation/interfaces/SelectionOption-1.html
+++ b/documentation/interfaces/SelectionOption-1.html
@@ -98,7 +98,7 @@
   <li class="breadcrumb-item">Interfaces</li>
   <li class="breadcrumb-item"
   >
-  TabView</li>
+  SelectionOption</li>
 </ol>
 
 <ul class="nav nav-tabs" role="tablist">
@@ -122,7 +122,7 @@
             <h3>File</h3>
         </p>
         <p class="comment">
-            <code>src/app/constants/tab-component-registry.ts</code>
+            <code>src/app/components/forms/province-and-city-form/province-and-city-form.component.ts</code>
         </p>
 
 
@@ -141,15 +141,16 @@
                         <td class="col-md-4">
                             <ul class="index-list">
                                 <li>
-                                        <a href="#component" 
+                                        <a href="#checked" 
 >
-                                            component
+                                            checked
                                         </a>
                                 </li>
                                 <li>
-                                        <a href="#title" 
+                                            <span class="modifier">Optional</span>
+                                        <a href="#partialChecked" 
 >
-                                            title
+                                            partialChecked
                                         </a>
                                 </li>
                             </ul>
@@ -167,9 +168,9 @@
                         <tbody>
                                 <tr>
                                     <td class="col-md-4">
-                                        <a name="component"></a>
-                                        <span class="name "><b>component</b>
-                                            <a href="#component">
+                                        <a name="checked"></a>
+                                        <span class="name "><b>checked</b>
+                                            <a href="#checked">
                                                 <span class="icon ion-ios-link"></span>
                                             </a>
                                         </span>
@@ -177,7 +178,7 @@
                                 </tr>
                                 <tr>
                                     <td class="col-md-4">
-                                        <code>component:     <code>Type&lt;any&gt;</code>
+                                        <code>checked:         <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/boolean" target="_blank" >boolean</a></code>
 </code>
                                     </td>
                                 </tr>
@@ -185,7 +186,7 @@
 
                                     <tr>
                                         <td class="col-md-4">
-                                            <i>Type : </i>    <code>Type&lt;any&gt;</code>
+                                            <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/boolean" target="_blank" >boolean</a></code>
 
                                         </td>
                                     </tr>
@@ -200,9 +201,9 @@
                         <tbody>
                                 <tr>
                                     <td class="col-md-4">
-                                        <a name="title"></a>
-                                        <span class="name "><b>title</b>
-                                            <a href="#title">
+                                        <a name="partialChecked"></a>
+                                        <span class="name "><b>partialChecked</b>
+                                            <a href="#partialChecked">
                                                 <span class="icon ion-ios-link"></span>
                                             </a>
                                         </span>
@@ -210,7 +211,7 @@
                                 </tr>
                                 <tr>
                                     <td class="col-md-4">
-                                        <code>title:         <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
+                                        <code>partialChecked:         <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/boolean" target="_blank" >boolean</a></code>
 </code>
                                     </td>
                                 </tr>
@@ -218,11 +219,16 @@
 
                                     <tr>
                                         <td class="col-md-4">
-                                            <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
+                                            <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/boolean" target="_blank" >boolean</a></code>
 
                                         </td>
                                     </tr>
 
+                                    <tr>
+                                        <td class="col-md-4">
+                                            <i>Optional</i>
+                                        </td>
+                                    </tr>
 
 
 
@@ -234,108 +240,200 @@
 
 
     <div class="tab-pane fade  tab-source-code" id="source">
-        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Type } from &#x27;@angular/core&#x27;;
-import { UserInfoFormComponent } from &#x27;app/components/forms/user-management-form/user-Info-form/user-info-form.component&#x27;;
-import { TruckInfoFormComponent } from &#x27;app/components/forms/truck-driver-manages-form/truck-info-form/truck-info-form.component&#x27;;
-import { DriverInfoFormComponent } from &#x27;app/components/forms/truck-driver-manages-form/driver-info-form/driver-info-form.component&#x27;;
-import { UsersMenuAccessFormComponent } from &#x27;app/components/forms/user-management-form/users-menu-access-form/users-menu-access-form.component&#x27;;
-import { DriverTruckWalletFormComponent } from &#x27;app/components/forms/truck-driver-manages-form/driver-truck-wallet-form/driver-truck-wallet-form.component&#x27;;
-import { FactoriesAndFreightFormComponent } from &#x27;app/components/forms/factories-production-centers-form/factories-production-centers-form.component&#x27;;
-import { LoadCapacitorFormComponent } from &#x27;app/components/forms/load-capacitor-form/load-capacitor-form.component&#x27;;
-import { LoaderTypeFormComponent } from &#x27;app/components/forms/loader-type-form/loader-type-form.component&#x27;;
-import { ProvinceAndCityFormComponent } from &#x27;app/components/forms/province-and-city-form/province-and-city-form.component&#x27;;
-import { ProductFormComponent } from &#x27;app/components/forms/product-form/product-form.component&#x27;;
-import { MainViewComponent } from &#x27;app/components/shared/main-view/main-view.component&#x27;;
-import { LadPlacesFormComponent } from &#x27;app/components/forms/lad-places-form/lad-places-form.component&#x27;;
+        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Component, inject, OnDestroy, OnInit } from &#x27;@angular/core&#x27;;
+import {
+  TreeTableChangedData,
+  TreeTableCheckboxComponent,
+} from &#x27;app/components/trees/tree-table-checkbox/tree-table-checkbox.component&#x27;;
+import { ErrorCodes } from &#x27;app/constants/error-messages&#x27;;
+import { ApiResponse } from &#x27;app/data/model/api-Response.model&#x27;;
+import { Province } from &#x27;app/data/model/province-city.model&#x27;;
+import { LoadingService } from &#x27;app/services/loading-service/loading-service.service&#x27;;
+import { ProvinceAndCityManagementService } from &#x27;app/services/province-city-management/province-and-city-management.service&#x27;;
+import { ToastService } from &#x27;app/services/toast-service/toast.service&#x27;;
+import { TreeNode } from &#x27;primeng/api&#x27;;
+import { TreeTableModule } from &#x27;primeng/treetable&#x27;;
+import { Subject, takeUntil } from &#x27;rxjs&#x27;;
 
-export enum TabComponentKey {
-  Main &#x3D; -1,
-  UserManagement &#x3D; 0,
-  TruckDriverManagement &#x3D; 1,
-  FactoriesAndFreightManagement &#x3D; 6,
-  LoaderTypeManagement &#x3D; 12,
-  LADPlaceManagementService &#x3D; 7,
-  ProvinceAndCityManagement &#x3D; 8,
-  ProductTypesManagement &#x3D; 9,
-  LoaderManagemet &#x3D; 13,
-  LoadCapacitorManagement &#x3D; 35,
-}
-export interface TabView {
-  title: string;
-  component: Type&lt;any&gt;;
+interface SelectionOption {
+  checked: boolean;
+  partialChecked?: boolean;
 }
 
-export const TabComponentRegistry: Record&lt;TabComponentKey, TabView[]&gt; &#x3D; {
-  [TabComponentKey.Main]: [
-    { title: &#x27;صفحه اصلی&#x27;, component: MainViewComponent },
-  ],
+@Component({
+  selector: &#x27;app-province-and-city-form&#x27;,
+  imports: [TreeTableModule, TreeTableCheckboxComponent],
+  templateUrl: &#x27;./province-and-city-form.component.html&#x27;,
+  styleUrl: &#x27;./province-and-city-form.component.scss&#x27;,
+})
+export class ProvinceAndCityFormComponent implements OnDestroy, OnInit {
+  private provincesAndCitesService &#x3D; inject(ProvinceAndCityManagementService);
+  private toast &#x3D; inject(ToastService);
+  private loadingService &#x3D; inject(LoadingService);
+  private loading &#x3D; false;
+  private destroy$ &#x3D; new Subject&lt;void&gt;();
 
-  [TabComponentKey.UserManagement]: [
-    {
-      title: &#x27;مدیریت کاربران&#x27;,
-      component: UserInfoFormComponent,
-    },
-    {
-      title: &#x27;مدریت دسترسی کابران&#x27;,
-      component: UsersMenuAccessFormComponent,
-    },
-  ],
+  provincesAndCites: TreeNode[] &#x3D; [];
+  cachedProvincesAndCites: TreeNode[] &#x3D; [];
+  selectionKey!: Record&lt;string, SelectionOption&gt;;
+  cacheKeyLength: number &#x3D; 2;
+  cachingEnabled: boolean &#x3D; true;
+  startKey: string &#x3D; &#x27;&#x27;;
 
-  [TabComponentKey.TruckDriverManagement]: [
-    {
-      title: &#x27;راننده&#x27;,
-      component: DriverInfoFormComponent,
-    },
-    {
-      title: &#x27;ناوگان&#x27;,
-      component: TruckInfoFormComponent,
-    },
-    {
-      title: &#x27;راننده ناوگان کیف پول&#x27;,
-      component: DriverTruckWalletFormComponent,
-    },
-  ],
-  [TabComponentKey.FactoriesAndFreightManagement]: [
-    {
-      title: &#x27;کارخانجات و مراکز تولید بار &#x27;,
-      component: FactoriesAndFreightFormComponent,
-    },
-  ],
-  [TabComponentKey.LoadCapacitorManagement]: [
-    {
-      title: &#x27;مخزن بار&#x27;,
-      component: LoadCapacitorFormComponent,
-    },
-  ],
-  [TabComponentKey.LoaderManagemet]: [
-    {
-      title: &#x27;بارگیر&#x27;,
-      component: LoaderTypeFormComponent,
-    },
-  ],
-  [TabComponentKey.ProvinceAndCityManagement]: [
-    {
-      title: &#x27;استان شهرها&#x27;,
-      component: ProvinceAndCityFormComponent,
-    },
-  ],
-  [TabComponentKey.LoaderTypeManagement]: [
-    {
-      title: &#x27;بارگیرها&#x27;,
-      component: LoaderTypeFormComponent,
-    },
-  ],
-  [TabComponentKey.ProductTypesManagement]: [
-    {
-      title: &#x27;کالاها&#x27;,
-      component: ProductFormComponent,
-    },
-  ],
-  [TabComponentKey.LADPlaceManagementService]: [{
-    title:&#x27;مبادی و مقاصد حمل بار&#x27;,
-    component:  LadPlacesFormComponent
-  }]
-};
+  ngOnDestroy(): void {
+    this.destroy$.next();
+    this.destroy$.complete();
+  }
+
+  ngOnInit(): void {
+    this.loadingService.loading$
+      .pipe(takeUntil(this.destroy$))
+      .subscribe((value) &#x3D;&gt; (this.loading &#x3D; value));
+  }
+
+  async searchProvinceAndCity(query: string): Promise&lt;void&gt; {
+    if (query.length &lt; this.cacheKeyLength) {
+      this.provincesAndCites &#x3D; [];
+      return;
+    }
+
+    const newStartKey &#x3D; query.substring(0, this.cacheKeyLength);
+
+    if (this.cachingEnabled &amp;&amp; newStartKey &#x3D;&#x3D;&#x3D; this.startKey) {
+      if (this.provincesAndCites.length &#x3D;&#x3D; 0)
+        this.provincesAndCites &#x3D; [...this.cachedProvincesAndCites];
+      return;
+    }
+
+    const response &#x3D;
+      await this.provincesAndCitesService.GetProvincesAndCitiesInfo(query);
+    if (!this.isSuccessful(response)) return;
+
+    this.startKey &#x3D; newStartKey;
+    this.provincesAndCites &#x3D; this.convertToTreeNode(response.data!);
+    this.cachedProvincesAndCites &#x3D; this.provincesAndCites;
+  }
+
+  async onChangeProvinceAndCity(change: TreeTableChangedData) {
+    if (this.loading) return;
+
+    try {
+      this.loadingService.setLoading(true);
+      const parent &#x3D; change.parent;
+      const children &#x3D; change.children;
+
+      if (!parent &amp;&amp; children.length &#x3D;&#x3D; 0) return;
+
+      // Handle only-child case
+      if (!parent &amp;&amp; children.length &gt; 0) {
+        const { CityCode, CityActive } &#x3D; children[0];
+        const response &#x3D; await this.handleCityChange(CityCode, CityActive);
+        if (!this.isSuccessful(response)) return;
+        this.toast.success(&#x27;موفق&#x27;, response.data?.Message ?? &#x27;&#x27;);
+        return;
+      }
+
+      // Handle parent is inactive
+      if (!parent.ProvinceActive) {
+        const { ProvinceId, ProvinceActive } &#x3D; parent;
+        await this.handleProvinceChange(ProvinceId, ProvinceActive);
+        return;
+      }
+
+      // Handle parent is active
+      if (parent.ProvinceActive) {
+        const requests &#x3D; children.map(({  CityCode, CityActive }) &#x3D;&gt;
+          this.handleCityChange(CityCode, CityActive)
+        );
+        const results &#x3D; await Promise.allSettled(requests);
+
+        const firstError &#x3D; results.find((r) &#x3D;&gt; r.status &#x3D;&#x3D;&#x3D; &#x27;rejected&#x27;) as
+          | PromiseRejectedResult
+          | undefined;
+
+        if (firstError) {
+          const error &#x3D;
+            (firstError.reason as any)?.error?.message ??
+            &#x27;خطای غیرمنتظره‌ای در حذف دسترسی رخ داد&#x27;;
+          this.toast.error(&#x27;خطا&#x27;, error);
+          await this.updateProductsInfo();
+          return;
+        }
+
+        const { ProvinceId, ProvinceActive  } &#x3D; parent;
+        await this. handleProvinceChange(ProvinceId, ProvinceActive );
+      }
+    } finally {
+      this.loadingService.setLoading(false);
+    }
+  }
+
+  private async handleProvinceChange(
+    provinceId: number,
+    active: boolean
+  ) {
+    const response &#x3D; await this.provincesAndCitesService.ChangeProvinceStatus(
+      provinceId,
+      active
+    );
+
+    if(!this.isSuccessful(response)) {
+      // await this.updateProductsInfo()
+      return;
+    }
+    
+    this.toast.success(&#x27;موفق&#x27;, response.data?.Message ?? &#x27;&#x27;);
+  }
+
+  private async handleCityChange(productId: number, active: boolean) {
+    const response &#x3D; await this.provincesAndCitesService.ChangeCityStatus(
+      productId,
+      active
+    );
+    return response;
+  }
+
+  private async updateProductsInfo() {
+    if (this.startKey.length &lt; this.cacheKeyLength) {
+      return;
+    }
+    const productsResponse &#x3D; await this.provincesAndCitesService.GetProvincesAndCitiesInfo(
+      this.startKey
+    );
+
+    if (this.isSuccessful(productsResponse)) {
+      this.provincesAndCites &#x3D; this.convertToTreeNode(productsResponse.data!);
+      this.cachedProvincesAndCites &#x3D; [...this.provincesAndCites]
+    }
+  }
+  private isSuccessful(response: ApiResponse&lt;any&gt;): boolean {
+    if (!response.success || !response.data) {
+      this.toast.error(
+        &#x27;خطا&#x27;,
+        response.error?.message ?? &#x27;خطای غیرمنتظره‌ای رخ داد&#x27;
+      );
+      if (response.error?.code &#x3D;&#x3D; ErrorCodes.NoRecordFound) {
+        return true;
+      }
+      return false;
+    }
+    return true;
+  }
+
+  private convertToTreeNode(provinces: Province[]): TreeNode[] {
+    return provinces.map((province) &#x3D;&gt; ({
+      data: {
+        ProvinceId: province.ProvinceId,
+        ProvinceName: province.ProvinceName,
+        ProvinceActive: province.ProvinceActive,
+      },
+      children:
+        province.Cities?.map((city) &#x3D;&gt; ({
+          data: city,
+        })) ?? [],
+    }));
+  }
+}
 </code></pre>
     </div>
 </div>
@@ -373,7 +471,7 @@ export const TabComponentRegistry: Record&lt;TabComponentKey, TabView[]&gt; &#x3
        <script>
             var COMPODOC_CURRENT_PAGE_DEPTH = 1;
             var COMPODOC_CURRENT_PAGE_CONTEXT = 'interface';
-            var COMPODOC_CURRENT_PAGE_URL = 'TabView.html';
+            var COMPODOC_CURRENT_PAGE_URL = 'SelectionOption-1.html';
             var MAX_SEARCH_RESULTS = 15;
        </script>
 
