--- a/documentation/interfaces/TreeTableChangedData.html
+++ b/documentation/interfaces/TreeTableChangedData.html
@@ -98,7 +98,7 @@
   <li class="breadcrumb-item">Interfaces</li>
   <li class="breadcrumb-item"
   >
-  TabView</li>
+  TreeTableChangedData</li>
 </ol>
 
 <ul class="nav nav-tabs" role="tablist">
@@ -122,7 +122,7 @@
             <h3>File</h3>
         </p>
         <p class="comment">
-            <code>src/app/constants/tab-component-registry.ts</code>
+            <code>src/app/components/trees/tree-table-checkbox/tree-table-checkbox.component.ts</code>
         </p>
 
 
@@ -141,15 +141,16 @@
                         <td class="col-md-4">
                             <ul class="index-list">
                                 <li>
-                                        <a href="#component" 
+                                        <a href="#children" 
 >
-                                            component
+                                            children
                                         </a>
                                 </li>
                                 <li>
-                                        <a href="#title" 
+                                            <span class="modifier">Optional</span>
+                                        <a href="#parent" 
 >
-                                            title
+                                            parent
                                         </a>
                                 </li>
                             </ul>
@@ -167,9 +168,9 @@
                         <tbody>
                                 <tr>
                                     <td class="col-md-4">
-                                        <a name="component"></a>
-                                        <span class="name "><b>component</b>
-                                            <a href="#component">
+                                        <a name="children"></a>
+                                        <span class="name "><b>children</b>
+                                            <a href="#children">
                                                 <span class="icon ion-ios-link"></span>
                                             </a>
                                         </span>
@@ -177,7 +178,7 @@
                                 </tr>
                                 <tr>
                                     <td class="col-md-4">
-                                        <code>component:     <code>Type&lt;any&gt;</code>
+                                        <code>children:     <code>any[]</code>
 </code>
                                     </td>
                                 </tr>
@@ -185,7 +186,7 @@
 
                                     <tr>
                                         <td class="col-md-4">
-                                            <i>Type : </i>    <code>Type&lt;any&gt;</code>
+                                            <i>Type : </i>    <code>any[]</code>
 
                                         </td>
                                     </tr>
@@ -200,9 +201,9 @@
                         <tbody>
                                 <tr>
                                     <td class="col-md-4">
-                                        <a name="title"></a>
-                                        <span class="name "><b>title</b>
-                                            <a href="#title">
+                                        <a name="parent"></a>
+                                        <span class="name "><b>parent</b>
+                                            <a href="#parent">
                                                 <span class="icon ion-ios-link"></span>
                                             </a>
                                         </span>
@@ -210,7 +211,7 @@
                                 </tr>
                                 <tr>
                                     <td class="col-md-4">
-                                        <code>title:         <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
+                                        <code>parent:         <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >any</a></code>
 </code>
                                     </td>
                                 </tr>
@@ -218,11 +219,16 @@
 
                                     <tr>
                                         <td class="col-md-4">
-                                            <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
+                                            <i>Type : </i>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >any</a></code>
 
                                         </td>
                                     </tr>
 
+                                    <tr>
+                                        <td class="col-md-4">
+                                            <i>Optional</i>
+                                        </td>
+                                    </tr>
 
 
 
@@ -234,108 +240,201 @@
 
 
     <div class="tab-pane fade  tab-source-code" id="source">
-        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Type } from &#x27;@angular/core&#x27;;
-import { UserInfoFormComponent } from &#x27;app/components/forms/user-management-form/user-Info-form/user-info-form.component&#x27;;
-import { TruckInfoFormComponent } from &#x27;app/components/forms/truck-driver-manages-form/truck-info-form/truck-info-form.component&#x27;;
-import { DriverInfoFormComponent } from &#x27;app/components/forms/truck-driver-manages-form/driver-info-form/driver-info-form.component&#x27;;
-import { UsersMenuAccessFormComponent } from &#x27;app/components/forms/user-management-form/users-menu-access-form/users-menu-access-form.component&#x27;;
-import { DriverTruckWalletFormComponent } from &#x27;app/components/forms/truck-driver-manages-form/driver-truck-wallet-form/driver-truck-wallet-form.component&#x27;;
-import { FactoriesAndFreightFormComponent } from &#x27;app/components/forms/factories-production-centers-form/factories-production-centers-form.component&#x27;;
-import { LoadCapacitorFormComponent } from &#x27;app/components/forms/load-capacitor-form/load-capacitor-form.component&#x27;;
-import { LoaderTypeFormComponent } from &#x27;app/components/forms/loader-type-form/loader-type-form.component&#x27;;
-import { ProvinceAndCityFormComponent } from &#x27;app/components/forms/province-and-city-form/province-and-city-form.component&#x27;;
-import { ProductFormComponent } from &#x27;app/components/forms/product-form/product-form.component&#x27;;
-import { MainViewComponent } from &#x27;app/components/shared/main-view/main-view.component&#x27;;
-import { LadPlacesFormComponent } from &#x27;app/components/forms/lad-places-form/lad-places-form.component&#x27;;
+        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { NgClass } from &#x27;@angular/common&#x27;;
+import {
+  Component,
+  EventEmitter,
+  Input,
+  OnChanges,
+  OnInit,
+  Output,
+  SimpleChanges,
+  ViewChild,
+} from &#x27;@angular/core&#x27;;
+import { TreeNode } from &#x27;primeng/api&#x27;;
+import { TreeTable, TreeTableModule } from &#x27;primeng/treetable&#x27;;
+import { SearchInputComponent } from &#x27;../../shared/inputs/search-input/search-input.component&#x27;;
+import { ButtonModule } from &#x27;primeng/button&#x27;;
 
-export enum TabComponentKey {
-  Main &#x3D; -1,
-  UserManagement &#x3D; 0,
-  TruckDriverManagement &#x3D; 1,
-  FactoriesAndFreightManagement &#x3D; 6,
-  LoaderTypeManagement &#x3D; 12,
-  LADPlaceManagementService &#x3D; 7,
-  ProvinceAndCityManagement &#x3D; 8,
-  ProductTypesManagement &#x3D; 9,
-  LoaderManagemet &#x3D; 13,
-  LoadCapacitorManagement &#x3D; 35,
-}
-export interface TabView {
-  title: string;
-  component: Type&lt;any&gt;;
+interface SelectionKey {
+  checked: boolean;
+  partialChecked?: boolean;
+  isHidden: boolean;
 }
 
-export const TabComponentRegistry: Record&lt;TabComponentKey, TabView[]&gt; &#x3D; {
-  [TabComponentKey.Main]: [
-    { title: &#x27;صفحه اصلی&#x27;, component: MainViewComponent },
-  ],
+export interface TreeTableChangedData {
+  parent?: any;
+  children: any[];
+}
 
-  [TabComponentKey.UserManagement]: [
-    {
-      title: &#x27;مدیریت کاربران&#x27;,
-      component: UserInfoFormComponent,
-    },
-    {
-      title: &#x27;مدریت دسترسی کابران&#x27;,
-      component: UsersMenuAccessFormComponent,
-    },
-  ],
+@Component({
+  selector: &#x27;app-tree-table-checkbox&#x27;,
+  templateUrl: &#x27;./tree-table-checkbox.component.html&#x27;,
+  styleUrl: &#x27;./tree-table-checkbox.component.scss&#x27;,
+  imports: [TreeTableModule, NgClass, ButtonModule,SearchInputComponent],
+})
+export class TreeTableCheckboxComponent implements OnInit, OnChanges {
+  @ViewChild(&#x27;treeTable&#x27;) tt!: TreeTable;
 
-  [TabComponentKey.TruckDriverManagement]: [
-    {
-      title: &#x27;راننده&#x27;,
-      component: DriverInfoFormComponent,
-    },
-    {
-      title: &#x27;ناوگان&#x27;,
-      component: TruckInfoFormComponent,
-    },
-    {
-      title: &#x27;راننده ناوگان کیف پول&#x27;,
-      component: DriverTruckWalletFormComponent,
-    },
-  ],
-  [TabComponentKey.FactoriesAndFreightManagement]: [
-    {
-      title: &#x27;کارخانجات و مراکز تولید بار &#x27;,
-      component: FactoriesAndFreightFormComponent,
-    },
-  ],
-  [TabComponentKey.LoadCapacitorManagement]: [
-    {
-      title: &#x27;مخزن بار&#x27;,
-      component: LoadCapacitorFormComponent,
-    },
-  ],
-  [TabComponentKey.LoaderManagemet]: [
-    {
-      title: &#x27;بارگیر&#x27;,
-      component: LoaderTypeFormComponent,
-    },
-  ],
-  [TabComponentKey.ProvinceAndCityManagement]: [
-    {
-      title: &#x27;استان شهرها&#x27;,
-      component: ProvinceAndCityFormComponent,
-    },
-  ],
-  [TabComponentKey.LoaderTypeManagement]: [
-    {
-      title: &#x27;بارگیرها&#x27;,
-      component: LoaderTypeFormComponent,
-    },
-  ],
-  [TabComponentKey.ProductTypesManagement]: [
-    {
-      title: &#x27;کالاها&#x27;,
-      component: ProductFormComponent,
-    },
-  ],
-  [TabComponentKey.LADPlaceManagementService]: [{
-    title:&#x27;مبادی و مقاصد حمل بار&#x27;,
-    component:  LadPlacesFormComponent
-  }]
-};
+  @Input() tree: TreeNode[] &#x3D; [];
+  @Input() parentField &#x3D; &#x27;&#x27;;
+  @Input() childField &#x3D; &#x27;&#x27;;
+  @Input() cols: string[] &#x3D; [];
+  @Input() rows: string[][] &#x3D; [];
+  @Input() enabledSearch &#x3D; false;
+  @Input() searchFields: string[] &#x3D; [];
+  @Input() searchPlaceholder &#x3D; &#x27;&#x27;;
+  @Input() paginator &#x3D; false;
+  @Input() rowsPerPage &#x3D; 10;
+  @Input() paginatorLocale &#x3D; &#x27;en&#x27;;
+  @Input() enabledAutoSearch: boolean &#x3D; true;
+
+  @Output() onTableCheckBoxChange &#x3D; new EventEmitter&lt;TreeTableChangedData&gt;();
+  @Output() onSearch &#x3D; new EventEmitter&lt;string&gt;();
+
+  treeMap &#x3D; new Map&lt;string, TreeNode&gt;();
+  selectionKeys: Record&lt;string, SelectionKey&gt; &#x3D; {};
+  lastSelectionKeys: Record&lt;string, SelectionKey&gt; &#x3D; {};
+  searchTerm &#x3D; &quot;&quot;;
+
+  ngOnInit(): void {
+    this.tree &#x3D; this.initializeTree();
+    this.buildTreeMap(this.tree);
+    this.lastSelectionKeys &#x3D; structuredClone(this.selectionKeys);
+  }
+
+  ngOnChanges(changes: SimpleChanges): void {
+    if (changes[&#x27;tree&#x27;]) {
+      this.tree &#x3D; this.initializeTree();
+      this.buildTreeMap(this.tree);
+      this.lastSelectionKeys &#x3D; structuredClone(this.selectionKeys);
+    }
+  }
+
+  selectionKeysChanged(newKeys: Record&lt;string, SelectionKey&gt;): void {
+    const allKeys &#x3D; new Set([
+      ...Object.keys(this.lastSelectionKeys),
+      ...Object.keys(newKeys),
+    ]);
+
+    const children: any[] &#x3D; [];
+    let parent: any | null &#x3D; null;
+
+    for (const key of allKeys) {
+      const old &#x3D; this.lastSelectionKeys[key];
+      const current &#x3D; newKeys[key];
+
+      const oldChecked &#x3D; old?.checked ?? false;
+      const oldPartial &#x3D; old?.partialChecked ?? false;
+      const newChecked &#x3D; current?.checked ?? false;
+      const newPartial &#x3D; current?.partialChecked ?? false;
+
+      const hasChanged &#x3D; oldChecked !&#x3D;&#x3D; newChecked || oldPartial !&#x3D;&#x3D; newPartial;
+      if (!hasChanged) continue;
+
+      const node &#x3D; this.treeMap.get(key);
+      if (!node) continue;
+
+      const isParent &#x3D; key.length &lt; 2;
+      if (isParent) {
+        const value &#x3D; newChecked || newPartial;
+        if (node.data[this.parentField] !&#x3D;&#x3D; value) {
+          node.data[this.parentField] &#x3D; value;
+          parent &#x3D; node.data;
+        }
+      } else {
+        if (node.data[this.childField] !&#x3D;&#x3D; newChecked) {
+          node.data[this.childField] &#x3D; newChecked;
+          children.push(node.data);
+        }
+      }
+    }
+
+    this.onTableCheckBoxChange.emit({ parent, children });
+    this.lastSelectionKeys &#x3D; structuredClone(newKeys);
+  }
+
+  private initializeTree(): TreeNode[] {
+    this.selectionKeys &#x3D; {};
+    return this.tree.map((node, i) &#x3D;&gt; this.setKeysRecursively(node, &#x60;${i}&#x60;));
+  }
+
+  private setKeysRecursively(node: TreeNode, path: string): TreeNode {
+    const parentChecked &#x3D; !!node.data?.[this.parentField];
+    let hasCheckedChild &#x3D; false;
+    let hasUncheckedChild &#x3D; false;
+
+    const children &#x3D;
+      node.children?.map((child, i) &#x3D;&gt; {
+        const childKey &#x3D; &#x60;${path}-${i}&#x60;;
+        const checked &#x3D; !!child.data?.[this.childField];
+        this.selectionKeys[childKey] &#x3D; { checked, isHidden: false };
+
+        checked ? (hasCheckedChild &#x3D; true) : (hasUncheckedChild &#x3D; true);
+
+        return { ...child, key: childKey };
+      }) ?? [];
+
+    const partialChecked &#x3D; hasCheckedChild &amp;&amp; hasUncheckedChild;
+    const checked &#x3D; partialChecked ? false : parentChecked;
+
+    this.selectionKeys[path] &#x3D; { checked, partialChecked, isHidden: false };
+    return { ...node, key: path, children };
+  }
+
+  private buildTreeMap(nodes: TreeNode[]): void {
+    for (const node of nodes) {
+      if (!node.key) continue;
+      this.treeMap.set(node.key, node);
+      if (node.children?.length) {
+        this.buildTreeMap(node.children);
+      }
+    }
+  }
+
+  filterTree(query: string): void {
+    if (this.enabledAutoSearch) {
+      this.filters(query);
+      this.onSearch.emit(query);
+    }
+  }
+
+  onClickSearch() {
+    if (!this.enabledAutoSearch) {
+      this.filters(this.searchTerm);
+      this.onSearch.emit(this.searchTerm);
+    }
+  }
+
+  private filters(query: string) {
+    const q &#x3D; query.trim().toLowerCase();
+    this.tree.forEach((node) &#x3D;&gt; {
+      const parentMatch &#x3D; this.searchFields.some((filed) &#x3D;&gt;
+        node.data?.[filed]?.toLowerCase().includes(q)
+      );
+
+      let matchedChild &#x3D; false;
+
+      node.children?.forEach((child) &#x3D;&gt; {
+        const childMatch &#x3D; this.searchFields.some((filed) &#x3D;&gt;
+          child.data?.[filed]?.toLowerCase().includes(q)
+        );
+        if (childMatch) {
+          child.styleClass &#x3D; &#x27;&#x27;;
+          matchedChild &#x3D; true;
+        } else {
+          child.styleClass &#x3D; &#x27;hidden&#x27;;
+        }
+      });
+
+      if (parentMatch || matchedChild) {
+        node.styleClass &#x3D; &#x27;&#x27;;
+      } else {
+        node.styleClass &#x3D; &#x27;hidden&#x27;;
+      }
+    });
+  }
+}
 </code></pre>
     </div>
 </div>
@@ -373,7 +472,7 @@ export const TabComponentRegistry: Record&lt;TabComponentKey, TabView[]&gt; &#x3
        <script>
             var COMPODOC_CURRENT_PAGE_DEPTH = 1;
             var COMPODOC_CURRENT_PAGE_CONTEXT = 'interface';
-            var COMPODOC_CURRENT_PAGE_URL = 'TabView.html';
+            var COMPODOC_CURRENT_PAGE_URL = 'TreeTableChangedData.html';
             var MAX_SEARCH_RESULTS = 15;
        </script>
 
