--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html dir="rtl" lang="en">
+<html dir="rtl" lang="fa">
   <head>
     <meta charset="utf-8"/>
     <title>سازمان راهداری و حمل نقل جاده ایی استان اصفهان</title>
