chore(index.html): format the code

--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,19 @@
-<!DOCTYPE html>
+<!doctype html>
 <html dir="rtl" lang="fa">
   <head>
-    <meta charset="utf-8"/>
+    <meta charset="utf-8" />
     <title>سازمان راهداری و حمل نقل جاده ایی استان اصفهان</title>
-    <base href="/"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <link rel="icon" type="image/x-icon" href="favicon.ico"/>
-    <link rel="manifest" href="manifest.webmanifest">
-</head>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="manifest" href="manifest.webmanifest" />
+  </head>
 
-  <body lang="fa">
+  <body class="text-sm lg:text-base" lang="fa">
     <app-root></app-root>
-    <noscript>لطفاً جاوااسکریپت را فعال کنید تا بتوانید از این برنامه استفاده کنید.</noscript>
-</body>
+    <noscript
+      >لطفاً جاوااسکریپت را فعال کنید تا بتوانید از این برنامه استفاده
+      کنید.</noscript
+    >
+  </body>
 </html>
